# symbolic-dynamics

./: .gitignore  CMakeLists.txt  README.md  coreConfig.cmake  main.cpp
.github/workflows/: cmake-multi-platform.yml
cpp_lib/core/: CMakeLists.txt
cpp_lib/core/include/: BlockCode.hpp  CylinderSet.hpp  Graph.hpp  GraphAlgorithms.hpp  Language.hpp  Matrix.hpp  Measure.hpp  SFT.hpp  ShiftSpace.hpp  SoficShift.hpp  StronglyConnectedComponents.hpp  Utils.hpp
cpp_lib/core/include/detail/: GraphAlgorithms.hpp  StronglyConnectedComponents.hpp
cpp_lib/core/src/: BlockCode.cpp  CylinderSet.cpp  Graph.cpp  Language.cpp  Measure.cpp  SFT.cpp  ShiftSpace.cpp  SoficShift.cpp  Utils.cpp
cpp_lib/core/test/: test_cylinder_sets.cpp  test_graph.cpp  test_language.cpp  test_period.cpp  test_sft.cpp  test_strongly_connected_components.cpp
examples/: CMakeLists.txt  example_utils.cpp  examples_main.cpp  golden_mean_shift.cpp  sfts.cpp  sofic_shifts.cpp
scripts/: install.sh  run_examples.sh
